--- a/tex/chap4.tex
+++ b/tex/chap4.tex
@@ -13,14 +13,15 @@
 \section{ITER Robots}
 \marginnote{Parts of this section have been taken from \citeauthyear{martins2020}}
 
-The ITER Robots competition is organized for school children located in Provence-Alpes-Côte d’Azur in order to introduce the various challenges ITER is facing. This contest aims to bring technical challenges to students into a cross-disciplinary approach.
+The ITER Robots competition is organized for school children located in Provence-Alpes-Côte d’Azur in order to introduce the various challenges ITER is facing. This contest aims to bring technical challenges to students into a cross-disciplinary approach. The author is participating in this educational challenge since 2014 as part of the technical jury. As explained after, this jury is reviewing the student's projects, giving indication to solve their problems. I believe that communicating on pedagogical tasks is also part of my job, reason why I've written the reference \sidecite{martins2020} with my colleague Jean-Pierre Martins from IO and Sylvie André from Agence ITER France.
+ 
 \begin{marginfigure}
 	\centering
 	\includegraphics[width=1.0\linewidth]{figures/chap5/ITER_Robots_1}
 	\caption{Picture of a robot LEGO MINDSTORMS® based during the TRANSPORT challenge. (©C.Roux, CEA)}
 	\label{fig:iterrobots1}
 \end{marginfigure}
-The challenge is to build a reduced scale robot to simulate a maintenance situation inside the future ITER Tokamak machine, namely the remote handling of components in a hostile environment. The robots' architecture was initially based on LEGO bricks with sensors controlled by a LEGO MINDSTORMS® programmable unit (Figure~\ref{fig:iterrobots1}). When considering kids and school capabilites, others technologies  have been introduced after such as Arduino® (or equivalent) boards and 3D printed elements. Each robot is named by its creators. The purpose of the contest is to challenge team composed of full classes or few students from primary schools (aged from 10 to 11), middle schools ("collège", aged from 11 to 15) and high schools ("lycée", aged from 16 to 18) to remote handling problematics. Junior high school team of students can be held within their established technological school programmes (in 7th, 8th and 9th grades or within interdisciplinary educational programme projects). Secondary school students can integrate the competition to their first and final year of high school technological programmes (in science, engineering or technology). In 2019, ITER Robots becomes part of the regular syllabus for primary school students as a technology lesson.
+The challenge is to build a reduced scale robot to simulate a maintenance situation inside the future ITER Tokamak machine, namely the remote handling of components in a hostile environment. The robots' architecture was initially based on LEGO bricks with sensors controlled by a LEGO MINDSTORMS® programmable unit (Figure~\ref{fig:iterrobots1}). When considering kids and school capabilites, other technologies  have been introduced afterwards such as Arduino® (or equivalent) boards and 3D printed elements. Each robot is named by its creators. The purpose of the contest is to challenge team composed of full classes or few students from primary schools (aged from 10 to 11), middle schools ("collège", aged from 11 to 15) and high schools ("lycée", aged from 16 to 18) to remote handling problematics. Junior high school team of students can be held within their established technological school programmes (in 7th, 8th and 9th grades or within interdisciplinary educational programme projects). Secondary school students can integrate the competition to their first and final year of high school technological programmes (in science, engineering or technology). In 2019, ITER Robots becomes part of the regular syllabus for primary school students as a technology lesson.
 
 \begin{marginfigure}
 	\centering
@@ -29,7 +30,7 @@ The challenge is to build a reduced scale robot to simulate a maintenance situat
 	\label{fig:iterrobots2}
 \end{marginfigure}
 
-Scaled-down and adapted challenges involving totally autonomous robots illustrate the real-life problems ITER will be facing. The challenges are downscaled replications of real remote handling tasks that will occur in the future facility. Indeed, when the nuclear phase of the experiment will begin, some areas of the tokamak become man access restricted. Inspections or repair of any of the tokamak components (weighing up to 50 tonnes) in the restricted areas will thus require reliable and robust remote handling techniques. In brief, the overall maintenance strategy of the tokamak consists on transporting the large components from their locations in the reactor to the repair workshops (called hot cells) for technical operations (cleaning, replacement of components, etc.), see Figure~\ref{fig:iterrobots2}.
+Scaled-down and adapted challenges involving totally autonomous robots illustrate the real-life problems ITER will be facing. The challenges are downscaled replications of real remote handling tasks that will occur in the future facility. Indeed, when the nuclear phase of the experiment will begin, some areas of the tokamak become man access restricted. Inspections or repair of any of the tokamak components (weighing up to 50 tonnes) in the restricted areas will thus require reliable and robust remote handling techniques. In brief, the overall maintenance strategy of the tokamak consists in transporting the large components from their locations in the reactor to the repair workshops (called hot cells) for technical operations (cleaning, replacement of components, etc.), see Figure~\ref{fig:iterrobots2}.
 
 Like the ITER scientists, students are actively involved for a period of 4 to 6 months in project management, such as project analysis, planning and testing. Students must combine the theoretical concepts learned at school and apply lessons during robots design, programming and testing activities. 
 
@@ -57,11 +58,11 @@ Robotics provides a fun and exciting environment for school students and is an i
 \section{Master Fusion}
 \marginnote{Parts of this section comes from the paper \citeauthyear{hillairet2020}. The author would like to thanks Joëlle Achard, without whom this work would not have been possible. The author would like to thanks the organizers of the Cadarache IRFM master fusion events: Remy Guirlet, Nicolas Fedorzak, Pascale Monier-Garbet, Rémi Douvenot from ENAC/Toulouse, current and former members and PhD students of the IRFM RF group for their various supports in these activities and of course the students themselves. }
 
-In order to train the future fusion scientists and engineers, French and European master programs exist to provide teaching on plasmas sciences and associated technologies. These master's programs deal with most scientific and technological fields related to the ionized media via theory, numerical modelling, material sciences, cryotechnology and superconductivity and instrumentation in extreme environments. However, for a vast majority of them, no dedicated courses are provided on RF sciences and technologies, despite their large use on fusion research facilities. 
+In order to train the future fusion scientists and engineers, French and European master programs exist to provide teaching on plasmas sciences and associated technologies. These master's programs deal with most scientific and technological fields related to the ionized media via theory, numerical modelling, material sciences, cryotechnology and superconductivity and instrumentation in extreme environments. However, for a vast majority of them, no dedicated courses are provided on RF sciences and technologies, despite their large use on fusion research facilities. Few hours of lectures are dedicated to plasma heating and current drive techniques, given by the author. 
 
 During two weeks at the beginning of the civil year, both French and European master students gather in the Cadarache research centre in order to participate in small groups to hands-on organized by fusion researchers. The topics of these hands cover the large spectrum of fields used in fusion research: cryotechnology and superconductors, infra-red measurements, numerical modelling, tokamak data analysis, virtual reality, etc. 
 
-Among these hands-on, some are devoted to RF component measurements and analysis and are described in more details in \sidecite{hillairet2020}. Specific hands-on have been devoted to ICRF and LHCD antenna component RF measurements: the high voltage probe calibration, the electrical scheme of possible ICRH antenna, the measurements of a mode converter or a multijunction RF performances. This Section only describes the later two hands-on dedicated on WEST LHCD antenna components. 
+Among these hands-on, some are devoted to RF component measurements and analysis and are described in more details in \sidecite{hillairet2020}. Specific hands-on have been devoted to ICRF and LHCD antenna component RF measurements: the high voltage probe calibration, the electrical scheme of possible ICRH antenna, the measurements of a mode converter or a multijunction RF performances. The author has designed these hands-on and supervises all the groups each years since 2011. This Section only describes the later two hands-on dedicated to WEST LHCD antenna components. 
 
 % ########################################################
 % ########################################################
@@ -87,7 +88,7 @@ During this hands-on, students measure the RF performances of a $\TE_{10}$-$\TE_
 	\label{fig:handsonlh2}
 \end{marginfigure}
 
-Like a role-playing game, the advisors ask the students to act as an RF technician who have been asked by his/her head to characterize this $\TE_{10}$-$\TE_{30}$ mode converter prototype and to report its performances as soon as possible. Unfortunately, the prototype had not been built exactly as designed: during the brazing operation which has been performed to assemble all the stainless-steel and copper parts of the structure, the mechanical pressure was not homogeneous, leading to less than a millimetre local deformations. This is however sufficient to perturb the RF performances: the mode converter and its splitter is found to not split evenly the power in three (-4.77~dB) but instead to -5.4, -4.2 and -5.3~dB for the left, central and right branches respectively at the frequency of interest (3.7~GHz). 
+Like a role-playing game, the advisors ask the students to act as an RF technician who has been asked by his/her head to characterize this $\TE_{10}$-$\TE_{30}$ mode converter prototype and to report its performances as soon as possible. Unfortunately, the prototype had not been built exactly as designed: during the brazing operation which has been performed to assemble all the stainless-steel and copper parts of the structure, the mechanical pressure was not homogeneous, leading to less than a millimetre local deformations. This is however sufficient to perturb the RF performances: the mode converter and its splitter is found to not split evenly the power into three (-4.77~dB) but instead to -5.4, -4.2 and -5.3~dB for the left, central and right branches respectively at the frequency of interest (3.7~GHz). 
 
 \begin{figure*}
 	\centering
@@ -125,12 +126,12 @@ During this hands-on, students have to measure the RF characteristics of a real 
 
 This first part is thus the opportunity to discuss and clarify how waves can be described either in spatial and spectral domains. The differences between Fourier transform and Discrete Fourier Transforms are also always discussed, since the latter is used in a Fast Fourier Transform algorithm but not always to the awareness of the students. The direction at which the RF waves should be preferentially launched inside the tokamak plasma, which is related to the usual phased array angle, is also discussed.
 
-\begin{marginfigure}
+\begin{figure}
 	\centering
-	\includegraphics[width=1.0\linewidth]{figures/chap5/handson_LH_MJ_2.png.jpg}
+	\includegraphics[width=0.8\linewidth]{figures/chap5/handson_LH_MJ_2.png.jpg}
 	\caption{Multijunction hands-on setup and description of its components}
 	\label{fig:handsonlhmj2}
-\end{marginfigure}
+\end{figure}
 
 Then students can perform RF measurements of the prototype multijunction module. However, since this structure uses thin rectangular waveguides (70x8mm), no standard RF components exist for this task. Specific home-made RF loads and couplers have been built to measure a fraction of the power in each waveguide. Students are then guided to the calibration methods required for these probes, using again specific home-made tools such as tapers, reduced size waveguides and matching loads made in graphite (Figure~\ref{fig:handsonlhmj2}).
 
@@ -162,17 +163,14 @@ Over the 8 years since we’ve started the RF hands-on, as part of the IRFM mast
 % ###############################################################
 % ###############################################################
 % ###############################################################
-\section[Open Source Software]{Open Source Software Development}
-\marginnote{Parts of this Section are taken from paper \citeauthyear{hillairet2019-1}. The author would like to Alex Arsenovic (and \href{https://github.com/scikit-rf/scikit-rf/graphs/contributors}{the scikit-rf developers}) for the scikit-rf package. 
-	
-	Since 2019, the author is officially a maintainer of this package.}
+\section[Open Source Software]{Open Source Software Development}\label{sec:OSS}
+\marginnote{Parts of this Section are taken from paper \citeauthyear{hillairet2019-1}. The author would like to thank Alex Arsenovic (and \href{https://github.com/scikit-rf/scikit-rf/graphs/contributors}{the scikit-rf developers}) for the scikit-rf package. }
 
 Modern science is founded on hypothesis testing and statistical significances of its derived results. Reproducing experiments, experimental or numerical, is the reason why scientists can gain confidence in their conclusions. However, during the last decades, the number of codes and libraries developed at an individual or a laboratory scale only increased. When these tools are not open-sourced, it leads to an obvious reproducibility problem as one should only rely on authors claims. To conform to the necessity of reproducibility in science,  software sources used in physical and engineering researches should ideally be made open when possible \sidecite{ince2012}. The case of RF network manipulation and analysis is no different.  
 
 \href{http://www.scikit-rf.org}{\texttt{scikit-rf}} is a Python package produced for RF/Microwave engineering  \sidecite{arsenovic2018}. The package is licensed under the Berkeley Software Distribution (BSD) licence and is actively developed by volunteers on GitHub. The package provides a modern, object-oriented library for RF network analysis and calibration. Besides offering standard microwave network operations, such as reading/writing Touchstone files (\texttt{.sNp}), connecting or de-embedding N-port networks, frequency/port slicing, concatenation or interpolations, it is also capable of advanced operations such as Vector Network Analyzer (VNA) calibrations, time-gating, interpolating between an individual set of networks, deriving network statistical properties and supports Virtual Instrument for direct communication to VNAs. The package also allows straightforward plotting of rectangular plots (dB, mag, phase, group delay, etc), Smith Charts or automated uncertainty bounds. 
 
-As the package is developed in Python, it makes it naturally compatible with the rich and modern scientific Python libraries \sidecite[-1cm]{millman2011}, for example  \texttt{scikit-learn} for machine learning tasks \sidecite[-0.5cm]{pedregosa2011} or \texttt{PlasmaPy} \sidecite{plasmapycommunity2019} for plasma physics. Using Jupyter notebooks documents\sidecite{kluyver2016}, modelling approaches and results can be shared and even directly reproduced using tools such as \href{https://mybinder.org/}{Binder} or \href{https://colab.research.google.com/}{Google Colab}, by other researchers (or future self) few months or years after work had been made. It also makes it naturally compatible with the rich and modern testing and code coverage frameworks and reproducible modelling approaches using online
-virtualization services. Being open-source, using scikit-rf to create the antenna numerical model with reproducible work-flow adds confidence
+As the package is developed in Python, it makes it naturally compatible with the rich and modern scientific Python libraries \sidecite[-1cm]{millman2011}, for example  \texttt{scikit-learn} for machine learning tasks \sidecite[-0.5cm]{pedregosa2011} or \texttt{PlasmaPy} \sidecite{plasmapycommunity2019} for plasma physics. Using Jupyter notebooks documents\sidecite{kluyver2016}, modelling approaches and results can be shared and even directly reproduced using tools such as \href{https://mybinder.org/}{Binder} or \href{https://colab.research.google.com/}{Google Colab}, by other researchers (or future self) few months or years after work had been made. It also makes it naturally compatible with the rich and modern testing and code coverage frameworks and reproducible modelling approaches using online virtualization services. Being open-source, using scikit-rf to create the antenna numerical model with reproducible work-flow adds confidence
 in the fact that future users could use/maintain and extend it.
 
-At the time of the writing of this manuscript (April 2020), the \texttt{scikit-rf} package has been download more then 50000 times since January 2017 using the Anaconda Python package manager (but this include multiple downloads/user). The number of download of the package on github is of the order of 20 to 50 per 15 days. The mailing list has 124 registered users.
+Since 2019, the author is officially maintainer of the scikit-rf package, which was initially developed by Alexander Arsenovic since 2009. This role consists in maintaining the code, that is to correct bugs found and reported by users, answers questions, write documentation, organize the community, publish new versions and develop new features. At the time of writing this manuscript (April 2020), the \texttt{scikit-rf} package has been download more than 50~000 times since January 2017 using the Anaconda Python package manager (which includes multiple downloads/user). The number of download of the package on github is of the order of 20 to 50 per 15 days. The mailing list has 124 registered users.
