--- a/tex/resume.tex
+++ b/tex/resume.tex
@@ -3,7 +3,7 @@
 
 La fusion est le processus nucléaire qui fait briller le soleil comme toutes les étoiles de l'univers et que l'on cherche à maîtriser sur terre. À l’opposé de la fission nucléaire, la fusion consiste à créer un noyau atomique plus lourd à partir de plusieurs noyaux légers. Sur Terre, la maîtrise de la fusion présenterait beaucoup d’avantages en comparaison de la fission nucléaire, en termes de densité énergétique, de sécurité, de ressources en combustibles et sans production intrinsèque de gaz à effet de serre. 
 
-Toutefois, reproduire les conditions de température favorables à la fusion, soit entre 100 et 200 millions de degrés Celsius (10-20 keV) n’est pas trivial. À ces températures, la matière se présente sous forme de plasma : les électrons composant les noyaux atomiques ont été arrachés, générant ainsi un mélange d’ions et d’électrons qui ne sont plus liés entre eux. Ce plasma peut être confiné et contrôlé en lui imposant un puissant champ magnétique : c’est ce qu’on réalise dans des machines de recherche appelées tokamaks, par exemple le tokamak WEST (anciennement Tore Supra) situé sur le centre CEA de Cadarache dans les Bouches-du-Rhône. Bien que les performances obtenues sur les différentes installations dans le monde aient continuellement progressées depuis plus de 50 ans, le rendement énergétique défini par le rapport entre l'énergie libérée par la fusion et l'énergie injectée dans le plasma pour obtenir les conditions de fusion reste encore inférieur à 1. Le projet international Iter, en cours de construction à Cadarache, doit démontrer qu'il est possible d'obtenir un rapport de 5 à 10.
+Toutefois, reproduire les conditions de température favorables à la fusion, soit entre 100 et 200 millions de degrés Celsius (10-20 keV) n’est pas trivial. À ces températures, la matière se présente sous forme de plasma : les électrons composant les noyaux atomiques ont été arrachés, générant ainsi un mélange d’ions et d’électrons qui ne sont plus liés entre eux. Ce plasma peut être confiné et contrôlé en lui imposant un puissant champ magnétique : c’est ce qu’on réalise dans des machines de recherche appelées tokamaks, par exemple le tokamak WEST (anciennement Tore Supra) situé sur le centre CEA de Cadarache dans les Bouches-du-Rhône. Bien que les performances obtenues sur les différentes installations dans le monde aient continuellement progressées depuis plus de 50 ans, le rendement énergétique défini par le rapport entre l'énergie libérée par la fusion et l'énergie injectée dans le plasma pour obtenir les conditions de fusion reste encore inférieur à 1. Le projet international Iter, en cours de construction à Cadarache, doit démontrer qu'il est possible d'obtenir un rapport de 5 à 10 au niveau du plasma.
 
 Afin d'obtenir des températures de plusieurs dizaines de millions de degrés, des systèmes radiofréquences sont utilisés couramment sur différentes installations expérimentales dans le monde. Ces systèmes vont générer puis transmettre jusqu'au plasma des ondes électromagnétiques dont la puissance est de l'ordre de plusieurs mégawatts. Selon leurs fréquences (de plusieurs MHz à une centaine de GHz), elles vont transférer leur énergie de préférence aux ions ou aux électrons du plasma, voire générer du courant électrique dans le plasma, afin d'augmenter la durée de maintien du plasma. Dans un tokamak, ces ondes sont injectées dans le plasma par des antennes situées à proximité de ce dernier. Ces antennes doivent être conçues pour opérer sous vide à des tensions et courants de plusieurs dizaines de kilovolts at kiloampères, sur des temps longs, tout en supportant les divers flux thermiques et de particules en provenance du plasma. Ces conditions sévères, voire hostiles, sont exclusives à ces machines de recherche et par conséquent la littérature scientifique sur ce sujet est peu abondante.
 
