--- a/styles/kao.sty
+++ b/styles/kao.sty
@@ -1,7 +1,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % kaobook
 % kao Styling Package
-% Version 1.2 (4/1/2020)
+% Version 1.2.2 (2020/07/03)
 %
 % This template originates from:
 % https://www.LaTeXTemplates.com
@@ -20,7 +20,7 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\ProvidesPackage{styles/kao}[2020/03/12 v1.1 kao]
+\ProvidesPackage{styles/kao}[2020/07/03 v1.2.3 kao]
 
 %----------------------------------------------------------------------------------------
 %	USEFUL PACKAGES AND COMMANDS
@@ -36,6 +36,8 @@
 \RequirePackage{xpatch} % Patch LaTeX code in external packages
 \RequirePackage{xstring} % Parse strings
 \RequirePackage{afterpage} % Run commands after specific pages
+\RequirePackage{imakeidx} % For the index; must be loaded before the 'caption' and 'hyperref' packages
+\RequirePackage{varioref} % For the cross-references; must be loaded before the 'hyperref' and 'cleveref' packages
 
 %----------------------------------------------------------------------------------------
 %	TITLE AND AUTHOR MACROS
@@ -47,7 +49,7 @@
 \renewcommand{\title}[2][]{
 	\gdef\@title{#2} % Store the full title in @title
 	\ifthenelse{\isempty{#1}}{ % If there is no plain title
-		\renewcommand{\@plaintitle}{\title} % Use full title
+		\renewcommand{\@plaintitle}{\@title} % Use full title
 	}{ % If there is a plain title
 		\renewcommand{\@plaintitle}{#1} % Use provided plain-text title
 	}%
@@ -60,7 +62,7 @@
 \renewcommand{\author}[2][]{
 	\gdef\@author{#2} % Store the full author in @author
 	\ifthenelse{\isempty{#1}}{ % If there is no plain author
-		\renewcommand{\@plainauthor}{\author}% Use full author
+		\renewcommand{\@plainauthor}{\@author}% Use full author
   	}{ % If there is a plain author
 		\renewcommand{\@plainauthor}{#1}% Use provided plain-text author
 	}%
@@ -73,6 +75,12 @@
 %----------------------------------------------------------------------------------------
 %	PARAGRAPH FORMATTING
 %----------------------------------------------------------------------------------------
+
+% Define lengths to set the scale of the document. Changing these lengths should affect all the other pagesize-dependent elements in the layout, such as the geometry of the page, the spacing between paragraphs, and so on. (As of now, not all the elements rely on hpll and vpll; future work will address this shortcoming.)
+\newlength{\hpll}
+\newlength{\vpll}
+\setlength{\hpll}{1mm}
+\setlength{\vpll}{1mm}
 
 \RequirePackage{ragged2e} % Required to achieve better ragged paragraphs
 \RequirePackage{setspace} % Required to easily set the space between lines
@@ -97,7 +105,7 @@
 
 %------------------------------------------------
 
-% Settings for a paragraph in the margins
+% Settings for paragraphs in the margins
 \newcommand{\@margin@par}{%
 	\justifying% justify text
 	\setlength{\RaggedRightParindent}{0em}% Suppress indentation
@@ -120,8 +128,7 @@
 
 \RequirePackage[section]{placeins} % Prevent floats to cross sections
 
-% Request more floats
-\extrafloats{100}%
+\extrafloats{100} % Require more floats
 
 %------------------------------------------------
 
@@ -167,21 +174,51 @@
 	\fi%
 }
 
+% Command to detect whether we are inside an mdframed environment
+\newif\ifinfloat
+\AtBeginEnvironment{mdframed}{\infloattrue}
+\AtBeginEnvironment{minipage}{\infloattrue}
+
+\def\IfInFloatingEnvir{%
+	\ifinfloat
+		\expandafter\@firstoftwo
+	\else
+		\expandafter\@secondoftwo
+	\fi
+}
+
+
 % Redefine the command to print marginnotes:
 % (a) the optional offset argument goes at the first position
 % (b) the offset can also be a multiple of baselineskip, like for snotez's \sidenote
 % Usage: \marginnote[<offset>]{Text of the note.}
 \let\oldmarginnote\marginnote%
-\renewcommand{\marginnote}[2][0pt]{%
-	\oldmarginnote{#2}[\snotez@if@nblskip{#1}{\@cdr#1\@nil\baselineskip}{#1}]%
+\RenewDocumentCommand\marginnote { o m }{%
+	\IfNoValueOrEmptyTF{#1}%
+	{%
+		\IfInFloatingEnvir{%
+			\oldmarginnote{#2}%
+		}{%
+			\marginpar{\@margin@par#2}%
+		}%
+	}{%
+		\oldmarginnote{#2}[\snotez@if@nblskip{#1}{\@cdr#1\@nil\baselineskip}{#1}]%
+	}%
 }
 
 % Redefine the following sidenotes' command to use the kao version of marginnote
 \RenewDocumentCommand \@sidenotes@placemarginal { m m }%
 {%
 	\IfNoValueOrEmptyTF{#1}%
-	{\marginpar{#2}}%
-	{\marginnote[#1]{#2}}%
+	{%
+		\IfInFloatingEnvir{%
+			\oldmarginnote{#2}%
+		}{%
+			\marginpar{#2}%
+		}%
+	}{%
+		\marginnote[#1]{#2}%
+	}%
 }
 
 % Initially set the counter to zero instead of 1, and update it before printing the sidenote.
@@ -216,11 +253,11 @@
 		\spacefactor\@x@sf%
 	\fi%
 	\relax%
-	}%
-	%
-	\RenewDocumentCommand\sidenotetext{ o o +m }% number, offset, text
-	{%
-		\IfNoValueOrEmptyTF{#1}%
+}%
+%
+\RenewDocumentCommand\sidenotetext{ o o +m }% number, offset, text
+{%
+	\IfNoValueOrEmptyTF{#1}%
 	{%
 		\@sidenotes@placemarginal{#2}{\@margin@par\thesidenote:\enskip#3}%
 	}%
@@ -228,7 +265,7 @@
 }
 
 %----------------------------------------------------------------------------------------
-%	FIGURES, TABLES AND CAPTIONS
+%	FIGURES, TABLES, LISTINGS AND CAPTIONS
 %----------------------------------------------------------------------------------------
 
 \RequirePackage{graphicx} % Include figures
@@ -238,6 +275,9 @@
 \RequirePackage{multirow} % Cells occupying multiple rows in tables
 \RequirePackage{multicol} % Multiple columns in dictionary
 \RequirePackage{rotating} % Allows tables and figures to be rotated
+\RequirePackage{listings} % Print code listings
+%\RequirePackage{minted}
+\RequirePackage{morewrites} % Fix some errors related to floats
 \RequirePackage[hypcap=true]{caption} % Correctly placed anchors for hyperlinks
 % \RequirePackage{atbegshi}
 % \RequirePackage{perpage}
@@ -266,53 +306,57 @@
 
 \setlength\columnseprule{.4pt} % Set the width of vertical rules in tables
 
+\newlength{\kaomarginskipabove} % Specify the space above a marginfigure, margintable or marginlisting
+\newlength{\kaomarginskipbelow} % Specify the space below a marginfigure, margintable or marginlisting
+\setlength{\kaomarginskipabove}{3mm plus 2pt minus 2pt}
+\setlength{\kaomarginskipbelow}{3mm plus 2pt minus 2pt}
+
 % Environment to hold a margin figure (from the sidenotes package)
 % We redefine it here because we want to use our own caption formatting.
-\newsavebox{\@kao@marginfigurebox}%
-\renewenvironment{marginfigure}[1][0pt]{ % The optional parameter is the vertical offset
-	%\let\footnotemark\mpfootnotemark
-	\FloatBarrier % Force LaTeX to place previous floats
-	\mparshift{\snotez@if@nblskip{#1}{\@cdr#1\@nil\baselineskip}{#1}} % Move the figure up or down according to the offset argument
-	\begin{lrbox}{\@sidenotes@marginfigurebox}%
-		\begin{minipage}{\marginparwidth}%
-			\captionsetup{type=figure}%
-			% \centering % Better not to center margin figures
+\RenewDocumentEnvironment{marginfigure}{o}{%
+  \marginskip{\kaomarginskipabove}%
+  \begin{lrbox}{\@sidenotes@marginfigurebox}%
+	\begin{minipage}{\marginparwidth}%
+	  \captionsetup{type=figure}%
 }{%
-		\end{minipage}%
-	\end{lrbox}%
-	\marginpar{\usebox{\@sidenotes@marginfigurebox}} % Place the figure box in the margin
+    \end{minipage}%
+  \end{lrbox}%
+  \marginnote[#1]{\usebox{\@sidenotes@marginfigurebox}}% Place the table box in the margin
+  \marginskip{\kaomarginskipbelow}%
 }
 
 % Environment to hold a margin table (from the sidenotes package)
-\newsavebox{\@kao@margintablebox}%
-\renewenvironment{margintable}[1][0pt]{ % The optional parameter is the vertical offset
-	\FloatBarrier % Force LaTeX to place previous floats
-	\mparshift{\snotez@if@nblskip{#1}{\@cdr#1\@nil\baselineskip}{#1}} % Move the table up or down according to the offset argument
-	\begin{lrbox}{\@sidenotes@margintablebox}%
-		\begin{minipage}{\marginparwidth}%
-			\captionsetup{type=table}%
+\RenewDocumentEnvironment{margintable}{o}{%
+  \marginskip{\kaomarginskipabove}%
+  \begin{lrbox}{\@sidenotes@margintablebox}%
+	\begin{minipage}{\marginparwidth}%
+	  \captionsetup{type=table}%
 }{%
-		\end{minipage}%
-	\end{lrbox}%
-	\marginpar{\usebox{\@sidenotes@margintablebox}} % Place the table box in the margin
+    \end{minipage}%
+  \end{lrbox}%
+  \marginnote[#1]{\usebox{\@sidenotes@margintablebox}}% Place the table box in the margin
+  \marginskip{\kaomarginskipbelow}%
 }
 
 % Environment to hold a margin listing
 \newsavebox{\@sidenotes@marginlistingbox}%
-\newenvironment{marginlisting}[1][0pt]{ % The optional parameter is the vertical offset
-	\FloatBarrier % Force LaTeX to place previous floats
-	\mparshift{\snotez@if@nblskip{#1}{\@cdr#1\@nil\baselineskip}{#1}} % Move the listing up or down according to the offset argument
-	\begin{lrbox}{\@sidenotes@marginlistingbox}%
-		\begin{minipage}{\marginparwidth}%
-			\captionsetup{type=lstlisting}%
+\NewDocumentEnvironment{marginlisting}{o}{% The optional parameter is the vertical offset
+  \marginskip{\kaomarginskipabove}%
+  \begin{lrbox}{\@sidenotes@marginlistingbox}%
+	\begin{minipage}{\marginparwidth}%
+	  \captionsetup{type=lstlisting}%
 }{%
-		\end{minipage}%
-	\end{lrbox}%
-	\marginpar{\usebox{\@sidenotes@marginlistingbox}} % Place the listing box in the margin
+	\end{minipage}%
+  \end{lrbox}%
+  \marginnote{#1}{\usebox{\@sidenotes@marginlistingbox}}% Place the listing box in the margin
+  \marginskip{\kaomarginskipbelow}%
 }
 
 % Change the position of the captions
 \DeclareFloatSeparators{marginparsep}{\hskip\marginparsep}%
+
+% Captions for the 'margin' layout
+\NewDocumentCommand{\marginfloatsetup}{}{%
 \if@twoside%
 	\floatsetup[figure]{ % Captions for figueres
 		margins=hangoutside, % Put captions in the margins
@@ -367,7 +411,8 @@
 		capbesidesep=marginparsep,%
 		floatwidth=\textwidth, % Width of the figure equal to the width of the text
 	}
-\else
+	\captionsetup[lstlisting]{format=llap,labelsep=space,singlelinecheck=no,belowskip=-0.6cm}
+\else%
 	\floatsetup[figure]{ % Captions for figueres
 		margins=hangright, % Put captions in the margins
 		facing=yes,%
@@ -421,11 +466,70 @@
 		capbesidesep=marginparsep,%
 		floatwidth=\textwidth, % Width of the figure equal to the width of the text
 	}
-\fi
+	\captionsetup[lstlisting]{format=llap,labelsep=space,singlelinecheck=no,belowskip=-0.6cm}
+\fi%
+}
+
+% Captions for the 'wide' layout
+\NewDocumentCommand{\widefloatsetup}{}{%
+	\floatsetup[figure]{ % Captions for figueres
+		capposition=bottom,%
+		margins=centering,%
+		floatwidth=\textwidth%
+	}
+	\floatsetup[widefigure]{ % Captions for wide figures
+		margins=hangoutside, % Put captions below the figure
+		facing=yes,%
+		capposition=bottom%
+	}
+	\floatsetup[table]{ % Captions for tables
+		capposition=above,%
+		margins=centering,%
+		floatwidth=\textwidth%
+	}
+	\floatsetup[widetable]{ % Captions for wide tables
+		margins=hangoutside, % Put captions above the table
+		facing=yes,%
+		capposition=above%
+	}
+	\floatsetup[lstlisting]{ % Captions for lstlistings
+		capposition=above,%
+		margins=centering,%
+		floatwidth=\textwidth%
+	}
+	\floatsetup[listing]{ % Captions for listings (minted package)
+		capposition=above,%
+		margins=centering,%
+		floatwidth=\textwidth%
+	}
+	\captionsetup[lstlisting]{% Captions style for lstlistings
+		format=margin,%
+		labelsep=colon,%
+		strut=no,%
+		singlelinecheck=false,%
+		indention=0pt,%
+		parindent=0pt,%
+		aboveskip=6pt,%
+		belowskip=6pt,%
+		belowskip=-0.1cm%
+	}
+}
 
 % Change the formatting of the captions
 \addtokomafont{captionlabel}{\bfseries} % Bold font for the figure label
-\DeclareCaptionFormat{margin}{\@margin@par #1#2#3} % Declare a new style to format the caption according to \@margin@par (see above)
+% Declare a new style to format the caption according to \@margin@par (see above)
+\DeclareCaptionFormat{margin}{\@margin@par #1#2#3}
+% Declare a new caption style for lstlistings
+\newsavebox\mycap
+\DeclareCaptionFormat{llap}{%
+	\begin{lrbox}{\mycap}%
+	\begin{minipage}{\marginparwidth}%
+	\@margin@par #1:#2#3%
+	\end{minipage}%
+	\end{lrbox}%
+	\marginnote[0.2cm]{\usebox\mycap}%
+}
+% Set the global caption style
 \captionsetup{
 	format=margin, % Use the style previously declared
 	strut=no,%
@@ -454,7 +558,7 @@
 % Choose the levels in table of contents
 \setcounter{tocdepth}{\subsectiontocdepth}
 
-% Define the style for figure and table entries
+% Define the style for toc entries
 \DeclareTOCStyleEntry[level=1,indent=0em,numwidth=2em]{tocline}{figure}
 \DeclareTOCStyleEntry[level=1,indent=0em,numwidth=2em]{tocline}{table}
 
@@ -470,7 +574,7 @@
 
 \RequirePackage{etoc} % Required to insert local tables of contents
 
-\newcounter{margintocdepth}
+\newcounter{margintocdepth} % Set the depth of the margintoc
 \setcounter{margintocdepth}{\subsectiontocdepth}
 
 \newlength{\mtocshift} % Length of the vertical offset used for margin tocs
@@ -481,24 +585,20 @@
 	\begingroup
 		% Set the style for section entries
 		\etocsetstyle{section}%
-		{\parindent -5pt \parskip 0pt}%
-		{\leftskip 0pt}%
-		{\makebox[.5cm]{\etocnumber\autodot}%
-		\etocname\nobreak\leaders\hbox{\hbox to 1.5ex {\hss.\hss}}\hfill\nobreak%
-		\etocpage\par}%
+		{\parindent -5pt \parskip 3pt}%
+		{\leftskip 20pt \rightskip 12pt} %
+		{\hspace{0.01cm}\llap{\etocnumber\hspace{0.1cm}}\etocname\nobreak\leaders\hbox{\hbox to 1.5ex {\hss.\hss}}\hfill\makebox[-0.1cm][l]{\etocpage}\par}%	
 		{}%
 		% Set the style for subsection entries
 		\etocsetstyle{subsection}%
 		{\parindent -5pt \parskip 0pt}%
-		{\leftskip 0pt}%
-		{\makebox[.5cm]{}%
-		\etocname\nobreak\leaders\hbox{\hbox to 1.5ex {\hss.\hss}}\hfill\nobreak%
-		\etocpage\par}%
+		{\leftskip 20pt \rightskip 12pt}%
+		{\hspace{0.01cm}\llap{\hspace{0.1cm}}\etocname\nobreak\leaders\hbox{\hbox to 1.5ex {\hss.\hss}}\hfill\makebox[-0.1cm][l]{\etocpage}\par}%
 		{}%
 		% Set the global style of the toc
 		%\etocsettocstyle{}{}
 		%\etocsettocstyle{\normalfont\sffamily\normalsize}{}
-		\etocsettocstyle{\usekomafont{section}\small}{}%
+		\etocsettocstyle{\usekomafont{section}\footnotesize}{}%
 		\etocsetnexttocdepth{\themargintocdepth}%
 		% Print the table of contents in the margin
 		\marginnote[#1]{\localtableofcontents}%
@@ -512,11 +612,12 @@
 % Set the default page layout
 \RequirePackage[
 	a4paper,
-	bottom=27.4mm,
-	inner=24.8mm,
-	textwidth=107mm,
-	marginparsep=8.2mm,
-	marginparwidth=49.4mm,
+	top=\vpll*\real{27.4},
+	bottom=\vpll*\real{27.4},
+	inner=\hpll*\real{24.8},
+	textwidth=\hpll*\real{107},
+	marginparsep=\hpll*\real{8.2},
+	marginparwidth=\hpll*\real{49.4},
 	includemp
 ]{geometry}
 
@@ -529,31 +630,30 @@
 
 % Command to choose among the three possible layouts
 \DeclareDocumentCommand{\pagelayout}{m}{%
-	\ifthenelse{\equal{margin}{#1}}{\marginlayout}{}%
-	\ifthenelse{\equal{wide}{#1}}{\widelayout}{}%
-	\ifthenelse{\equal{fullwidth}{#1}}{\fullwidthlayout}{}%
+	\ifthenelse{\equal{margin}{#1}}{\marginlayout\marginfloatsetup}{}%
+	\ifthenelse{\equal{wide}{#1}}{\widelayout\widefloatsetup}{}%
+	\ifthenelse{\equal{fullwidth}{#1}}{\fullwidthlayout\widefloatsetup}{}%
 }
 
 % Layout #1: large margins
 \newcommand{\marginlayout}{%
 	\newgeometry{
-		top=27.4mm,
-		bottom=27.4mm,
-		inner=24.8mm,
-		textwidth=107mm,
-		marginparsep=8.2mm,
-		marginparwidth=49.4mm,
-		includemp
+		top=\vpll*\real{27.4},
+		bottom=\vpll*\real{27.4},
+		inner=\hpll*\real{24.8},
+		textwidth=\hpll*\real{107},
+		marginparsep=\hpll*\real{8.2},
+		marginparwidth=\hpll*\real{49.4},
 	}%
 }
 
-% Layout #2: no margins at all
+% Layout #2: small, symmetric margins
 \newcommand{\widelayout}{%
 	\newgeometry{
-		top=27.4mm,
-		bottom=27.4mm,
-		inner=24.8mm,
-		outer=24.8mm,
+		top=\vpll*\real{27.4},
+		bottom=\vpll*\real{27.4},
+		inner=\hpll*\real{24.8},
+		outer=\hpll*\real{24.8},
 		marginparsep=0mm,
 		marginparwidth=0mm,
 		ignoremp,
@@ -563,18 +663,46 @@
 % Layout #3: no margins and no space above or below the body
 \newcommand{\fullwidthpage}{%
 	\newgeometry{
-		top=0cm,
-		bottom=0cm,
-		inner=0cm,
-		outer=0cm,
-		marginparwidth=0cm,
-		marginparsep=0cm,
+		top=0mm,
+		bottom=0mm,
+		inner=0mm,
+		outer=0mm,
+		marginparwidth=0mm,
+		marginparsep=0mm,
 		ignoremp
 	}%
 }
 
 % Set the default page layout
 \AtBeginDocument{\pagelayout{margin}}
+
+%----------------------------------------------------------------------------------------
+%	WIDE PARAGRAPHS
+%----------------------------------------------------------------------------------------
+
+% Environment for a wide paragraph
+\NewDocumentEnvironment{widepar}{}{%
+  \if@twoside%
+	\Ifthispageodd{%
+	  \begin{addmargin}[0cm]{-\marginparwidth-\marginparsep}%
+	}{%
+	  \begin{addmargin}[-\marginparwidth-\marginparsep]{0cm}%
+	}%
+  \else%
+	\begin{addmargin}[0cm]{-\marginparwidth-\marginparsep}%
+  \fi%
+}{%
+	\end{addmargin}%
+}
+
+% Environment for a wide equation
+\NewDocumentEnvironment{wideequation}{}{%
+  \begin{widepar}%
+	\begin{equation}%
+}{%
+	\end{equation}%
+  \end{widepar}%
+}
 
 %----------------------------------------------------------------------------------------
 %	HEADERS AND FOOTERS
@@ -636,6 +764,7 @@
 %----------------------------------------------------------------------------------------
 
 % https://tex.stackexchange.com/questions/47576/combining-ifxetex-and-ifluatex-with-the-logical-or-operation
+% Introduce a command to find out whether the compiler is XeTeX or LuaTeX
 \newif\ifxetexorluatex
 \ifxetex
 	\xetexorluatextrue
@@ -648,7 +777,9 @@
 \fi
 
 \ifxetexorluatex
-	\RequirePackage{unicode-math}
+	\RequirePackage{amssymb} % Must be loaded before unicode-math
+	\RequirePackage[force]{filehook} % Fixes an error
+	\RequirePackage{unicode-math} % Math fonts in xetexorluatex
 	\setromanfont[
 		Scale=1.04
 	]{Libertinus Serif}
@@ -667,7 +798,6 @@
 	\RequirePackage[vvarbb,smallerops,bigdelims]{newpxmath} % Math palatino font
 	\RequirePackage[scaled=.85]{beramono} % Monospace font
 	\RequirePackage[scr=rsfso,cal=boondoxo]{mathalfa} % Mathcal from STIX, unslanted a bit
-	\RequirePackage{amsfonts} % Mathematical fonts
 	\RequirePackage{amssymb} % Math symbols, including \blacktriangleright, used for bullets
 \fi
 
@@ -769,4 +899,3 @@
 
 \RequirePackage{styles/environments}
 \RequirePackage{styles/packages}
-\RequirePackage{styles/kaorefs}
