--- a/styles/kaobiblio.sty
+++ b/styles/kaobiblio.sty
@@ -15,12 +15,11 @@
 %
 % This work consists of all the files listed in MANIFEST.md.
 
-\ProvidesPackage{styles/kaobiblio}[2020/03/12 v1.0 kaobiblio]
+\ProvidesPackage{styles/kaobiblio}[2020/03/07 v1.1.1 kaobiblio]
 
 \RequirePackage{etoolbox} % Easy programming to modify TeX stuff
-\RequirePackage{calc} % Operations like sums and differences
-\RequirePackage{marginnote} % Provides options for margin notes
 \RequirePackage{perpage} % Reset counters
+\RequirePackage{iflang} % Check the document language
 \RequirePackage{xkeyval} % Manage class options
 \RequirePackage{xparse} % Parse arguments for macros
 \RequirePackage{xstring} % Parse strings
@@ -75,31 +74,34 @@
 \newcommand\IfStringInList[2]{\IfSubStr{,#2,}{,#1,}}
 
 % Set the language-specific back reference strings
+% #LANGUAGE
 \@ifpackageloaded{polyglossia}{%
-	\iflanguage{english}{%
+	\IfLanguageName{english}{%
 		\DefineBibliographyStrings{english}{%
 			backrefpage = {cited on page},
 			backrefpages = {cited on pages},
 		}
 	}{}
-	\iflanguage{italian}{%
+	\IfLanguageName{italian}{%
 		\DefineBibliographyStrings{italian}{%
 			backrefpage = {citato a pag.},
 			backrefpages = {citato a pagg.},
 		}
 	}{}
 }{
-	\IfStringInList{english}{\bbl@loaded}{%
-		\DefineBibliographyStrings{english}{%
-			backrefpage = {cited on page},
-			backrefpages = {cited on pages},
-		}
-	}{}
-	\IfStringInList{italian}{\bbl@loaded}{%
-		\DefineBibliographyStrings{italian}{%
-			backrefpage = {citato a pag.},
-			backrefpages = {citato a pagg.},
-		}
+	\@ifpackageloaded{babel}{%
+		\IfStringInList{english}{\bbl@loaded}{%
+			\DefineBibliographyStrings{english}{%
+				backrefpage = {cited on page},
+				backrefpages = {cited on pages},
+			}
+		}{}
+		\IfStringInList{italian}{\bbl@loaded}{%
+			\DefineBibliographyStrings{italian}{%
+				backrefpage = {citato a pag.},
+				backrefpages = {citato a pagg.},
+			}
+		}{}
 	}{}
 }
 
@@ -107,25 +109,100 @@
 %	CITATION COMMANDS
 %----------------------------------------------------------------------------------------
 
-% TODO: perhaps use biblatex's \citecommands
+% biblatex-like commands that also print a citation in the margin
+% Usage:
+    % First optional argument is always vertical shift and must be given as an (empty) argument when using following a postnote and/or prenote
+    % Second optional argument is always the postnote if the third argument isn't specified or is the prenote if the third argument is specified (same pattern as the biblatex commands)
+    % Third optional argument is always the postnote
+    % Mandatory argument is always the citation key(s)
 
-\newlength\sclen
-
-% Command to print a citation in the margins
-\NewDocumentCommand{\sidecite}{O{0pt}m}{% The optional parameter is the vertical shift; the mandatory one is the citation key
-	\cite{#2}% With this we print the marker in the text and add the item to the bibliography at the end
-	\margincitation[#1]{#2}% We then pass the cited items to this command, \margincitation
+% Command to \cite and print a citation in the margin
+% First optional argument: vertical shift
+% Second optional argument: postnote if the third argument isn't specified; prenote if the third argument is specified (same pattern as the \textcite command)
+% Third optional argument: postnote
+% Mandatory argument: citation key
+\NewDocumentCommand{\sidecite}{o o o m}{%
+    % With this we print the marker in the text and add the item to the bibliography at the end
+    \IfNoValueOrEmptyTF{#2}
+        {\cite{#4}}
+        {\IfNoValueOrEmptyTF{#3}
+            {\IfNoValueTF{#3}
+                {\cite[#2]{#4}}
+                {\cite[#2][]{#4}}% postnote is empty, so pass empty postnote
+            }
+            {\cite[#2][#3]{#4}}%
+        }%
+	\def\itemdelim{---}%
+	\margincitation[#1]{#4}% We then pass the cited items to this command, \margincitation
 }
 
+% Command to \textcite and print a citation in the margin
+% First optional argument: vertical shift
+% Second optional argument: postnote if the third argument isn't specified; prenote if the third argument is specified (same pattern as the \textcite command)
+% Third optional argument: postnote
+% Mandatory argument: citation key
+\NewDocumentCommand{\sidetextcite}{o o o m}{%
+    % With this we print the marker in the text and add the item to the bibliography at the end
+    \IfNoValueOrEmptyTF{#2}
+        {\textcite{#4}}
+        {\IfNoValueOrEmptyTF{#3}
+            {\IfNoValueTF{#3}
+                {\textcite[#2]{#4}}
+                {\textcite[#2][]{#4}}% postnote is empty, so pass empty postnote
+            }
+            {\textcite[#2][#3]{#4}}%
+        }%
+	\def\itemdelim{---}%
+	\margincitation[#1]{#4}% We then pass the cited items to this command, \margincitation
+}
+
+% Command to \parencite or \parencite* and print a citation in the margin
+% First optional (star) argument: use \parencite* if included; otherwise use \parencite
+% Second optional argument: vertical shift
+% Third optional argument: postnote if the fourth argument isn't specified; prenote if the fourth argument is specified (same pattern as the \parencite command)
+% Fourth optional argument: postnote
+% Mandatory argument: citation key
+\NewDocumentCommand{\sideparencite}{s o o o m}{%
+    % With this we print the marker in the text and add the item to the bibliography at the end
+    \IfBooleanTF#1
+        {\IfNoValueOrEmptyTF{#3}
+            {\parencite*{#5}}
+            {\IfNoValueOrEmptyTF{#4}
+                {\IfNoValueTF{#4}
+                    {\parencite*[#3]{#5}}
+                    {\parencite*[#3][]{#5}}% postnote is empty, so pass empty postnote
+                }
+                {\parencite*[#3][#4]{#5}}%
+            }%
+        }%
+        {\IfNoValueOrEmptyTF{#3}
+            {\parencite{#5}}
+            {\IfNoValueOrEmptyTF{#4}
+                {\IfNoValueTF{#4}
+                    {\parencite[#3]{#5}}
+                    {\parencite[#3][]{#5}}% postnote is empty, so pass empty postnote
+                }
+                {\parencite[#3][#4]{#5}}%
+            }%
+        }%
+    \def\itemdelim{---}%
+	\margincitation[#2]{#5}% We then pass the cited items to this command, \margincitation
+}
+
+
 % Command to split the cited items and execute an action for each of them
-\NewDocumentCommand{\margincitation}{O{0pt}>{\SplitList{,}}m}{% The mandatory parameter is a comma-separated list of citation keys, which is splitted into single items
-	\setlength{\sclen}{#1-1pt}%
-	\marginnote[\sclen]{\ProcessList{#2}{\formatmargincitation}}% Create a marginnote for each item
+\newcommand\margincitedelim{\\} % Choose the default separator for multiple citations
+\NewDocumentCommand{\margincitation}{o >{\SplitList{,}}m}{% The mandatory parameter is a comma-separated list of citation keys, which is splitted into single items
+	% Redefine the \margincitedelim with a delay (https://tex.stackexchange.com/questions/110898/package-xparse-splitlist-last-token). Users can 'renew' the \margincitedelim command in their main.tex.
+	\let\origmargincitedelim\margincitedelim%
+	\renewcommand\margincitedelim{\renewcommand\margincitedelim{\origmargincitedelim}}%
+	\marginnote[#1]{\ProcessList{#2}{\formatmargincitation}}% Create a marginnote for each item
+	\let\margincitedelim\origmargincitedelim% Reset
 }
 
 % Command to format the marginnote created for cited items
 \NewDocumentCommand{\formatmargincitation}{m}{% The parameter is a single citation key
-	\parencite{#1}: \citeauthor*{#1} (\citeyear{#1}), \citetitle{#1}\\%
+	\margincitedelim\parencite{#1}: \citeauthor*{#1} (\citeyear{#1}), \citetitle{#1}%
 }
 
 %----------------------------------------------------------------------------------------
