--- a/styles/mdftheorems.sty
+++ b/styles/mdftheorems.sty
@@ -15,16 +15,62 @@
 %
 % This work consists of all the files listed in MANIFEST.md.
 
+% Use mdframed to shade the background of theorems
 \ProvidesPackage{styles/mdftheorems}
 
-% Use mdframed to shade the background of theorems
+% Load packages
+\let\openbox\relax % Workaround to get rid of an annoying error
+\RequirePackage{xkeyval} % Manage package options
+\RequirePackage{amsmath} % Improved mathematics
+\RequirePackage{amsthm} % Mathematical environments
+\RequirePackage{thmtools} % Theorem styles
+\RequirePackage{tikz} % Colorful boxes
+\RequirePackage[framemethod=TikZ]{mdframed}
 
-\let\openbox\relax
-\usepackage{amsmath} % Improved mathematics
-\usepackage{amsthm} % Mathematical environments
-\usepackage{thmtools}
-\usepackage{tikz}
-\usepackage[framemethod=TikZ]{mdframed}
+% Define the default colors
+\newcommand{\@background}{Goldenrod!45!white}
+\newcommand{\@theorembackground}{\@background}
+\newcommand{\@propositionbackground}{\@background}
+\newcommand{\@lemmabackground}{\@background}
+\newcommand{\@corollarybackground}{\@background}
+\newcommand{\@definitionbackground}{\@background}
+\newcommand{\@assumptionbackground}{\@background}
+\newcommand{\@remarkbackground}{\@background}
+\newcommand{\@examplebackground}{\@background}
+
+% Declare the options to change the colors
+\DeclareOptionX{background}{%
+	\renewcommand{\@background}{#1}%
+}
+\DeclareOptionX{theorembackground}{%
+	\renewcommand{\@theorembackground}{#1}%
+}
+\DeclareOptionX{propositionbackground}{%
+	\renewcommand{\@propositionbackground}{#1}%
+}
+\DeclareOptionX{lemmabackground}{%
+	\renewcommand{\@lemmabackground}{#1}%
+}
+\DeclareOptionX{corollarybackground}{%
+	\renewcommand{\@corollarybackground}{#1}%
+}
+\DeclareOptionX{definitionbackground}{%
+	\renewcommand{\@definitionbackground}{#1}%
+}
+\DeclareOptionX{assumptionbackground}{%
+	\renewcommand{\@assumptionbackground}{#1}%
+}
+\DeclareOptionX{remarkbackground}{%
+	\renewcommand{\@remarkbackground}{#1}%
+}
+\DeclareOptionX{examplebackground}{%
+	\renewcommand{\@examplebackground}{#1}%
+}
+\DeclareOption*{\PassOptionsToPackage{\CurrentOption}{biblatex}}
+
+% Process the options
+\ProcessOptionsX\relax
+\ProcessOptions\relax
 
 % Box style
 \mdfsetup{skipabove=\topskip,skipbelow=0pt}%-.5\topskip}
@@ -80,6 +126,18 @@
 \declaretheoremstyle[
 	%spaceabove=.5\thm@preskip,
 	%spacebelow=.5\thm@postskip,
+	%headfont=\normalfont\bfseries,%\scshape,
+	%notefont=\normalfont, notebraces={ (}{)},
+	bodyfont=\normalfont\itshape,
+	%headformat={\NAME\space\NUMBER\space\NOTE},
+	headpunct={},
+	postheadspace={.5em plus .1em minus .1em},
+	%prefoothook={\hfill\qedsymbol}
+]{kaoassumption}
+
+\declaretheoremstyle[
+	%spaceabove=.5\thm@preskip,
+	%spacebelow=.5\thm@postskip,
 	%headfont=\normalfont\bfseries,
 	%notefont=\normalfont, notebraces={ (}{)},
 	%bodyfont=\normalfont,
@@ -109,85 +167,106 @@
 \declaretheorem[
 	name=Theorem,
 	style=kaoplain,
-	refname={theorem,theorems},
+	%refname={theorem,theorems},
+	refname={Theorem,Theorems},
 	Refname={Theorem,Theorems},
 	numberwithin=section,
 	mdframed={
 		style=mdfkao,
-		backgroundcolor=Goldenrod!45!white,
-		frametitlebackgroundcolor=Goldenrod!45!white,
+		backgroundcolor=\@theorembackground,
+		%frametitlebackgroundcolor=\@theorembackground,
 	},
 ]{theorem}
 \declaretheorem[
 	name=Proposition,
-	refname={proposition,propositions},
+	%refname={proposition,propositions},
+	refname={Proposition,Propositions},
 	Refname={Proposition,Propositions},
 	sibling=theorem,
 	mdframed={
 		style=mdfkao,
-		backgroundcolor=Goldenrod!45!white,
-		frametitlebackgroundcolor=Goldenrod!45!white,
+		backgroundcolor=\@propositionbackground,
+		%frametitlebackgroundcolor=\@theorembackground,
 	},
 ]{proposition}
 \declaretheorem[
 	name=Lemma,
-	refname={lemma,lemmas},
+	%refname={lemma,lemmas},
+	refname={Lemma,Lemmas},
 	Refname={Lemma,Lemmas},
 	sibling=theorem,
 	mdframed={
 		style=mdfkao,
-		backgroundcolor=Goldenrod!45!white,
-		frametitlebackgroundcolor=Goldenrod!45!white,
+		backgroundcolor=\@lemmabackground,
+		%frametitlebackgroundcolor=\@theorembackground,
 	},
 ]{lemma}
 \declaretheorem[
 	name=Corollary,
-	refname={corollary,corollaries},
+	%refname={corollary,corollaries},
+	refname={Corollary,Corollaries},
 	Refname={Corollary,Corollaries},
 	sibling=theorem,
 	mdframed={
 		style=mdfkao,
-		backgroundcolor=Goldenrod!45!white,
-		frametitlebackgroundcolor=Goldenrod!45!white,
+		backgroundcolor=\@corollarybackground,
+		%frametitlebackgroundcolor=\@theorembackground,
 	},
 ]{corollary}
 
 \theoremstyle{kaodefinition}
 \declaretheorem[
 	name=Definition,
-	refname={definition,definitions},
+	%refname={definition,definitions},
+	refname={Definition,Definitions},
 	Refname={Definition,Definitions},
 	numberwithin=section,
 	mdframed={
 		style=mdfkao,
-		backgroundcolor=Goldenrod!45!white,
-		frametitlebackgroundcolor=Goldenrod!45!white,
+		backgroundcolor=\@definitionbackground,
+		%frametitlebackgroundcolor=\@theorembackground,
 	},
 ]{definition}
+
+\theoremstyle{kaoassumption}
+\declaretheorem[
+	name=Assumption,
+	%refname={assumption,assumptions},
+	refname={Assumption,Assumptions},
+	Refname={Assumption,Assumptions},
+	numberwithin=section,
+	mdframed={
+		style=mdfkao,
+		backgroundcolor=\@assumptionbackground,
+		%frametitlebackgroundcolor=\@theorembackground,
+	},
+]{assumption}
 
 \theoremstyle{kaoremark}
 \declaretheorem[
 	name=Remark,
-	refname={remark,remarks},
+	%refname={remark,remarks},
+	refname={Remark,Remarks},
 	Refname={Remark,Remarks},
 	numberwithin=section,
 	mdframed={
 		style=mdfkao,
-		backgroundcolor=Goldenrod!45!white,
-		frametitlebackgroundcolor=Goldenrod!45!white,
+		backgroundcolor=\@remarkbackground,
+		%frametitlebackgroundcolor=\@theorembackground,
 	},
 ]{remark}
 
 \theoremstyle{kaoexample}
 \declaretheorem[
 	name=Example,
-	refname={example,examples},
+	%refname={example,examples},
+	refname={Example,Examples},
 	Refname={Example,Examples},
 	numberwithin=section,
 	mdframed={
 		style=mdfkao,
-		backgroundcolor=Goldenrod!45!white,
-		frametitlebackgroundcolor=Goldenrod!45!white,
+		backgroundcolor=\@examplebackground,
+		%frametitlebackgroundcolor=\@theorembackground,
 	},
 ]{example}
 
